# fakedocs

./: pyproject.toml
doc/: changelog.rst  conf.py  index.rst  overview.rst
