[build-system]
requires = ["setuptools", "wheel", "cmake>=3.13"]
build-backend = "setuptools.build_meta"


[project]
name = "xyz"
version = "0.0.1"
requires-python = ">=3.8,<3.11"
authors = [
  {name = "nobody", email = "nobody@nowhere.com"},
]
description = "does nothing"
license = { text = "BSD 2-Clause License" }
keywords = ["nothing"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Nobody",
    "Topic :: Nothing",
]
readme = "README.md"
dependencies = [
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://www.craylabs.org"
Documentation = "https://github.com/ankona/fakedocs"
Repository = "https://github.com/ankona/fakedocs"


[project.optional-dependencies]
dev = [
  "black>=20.8b1",
  "isort>=5.6.4",
  "pylint>=2.10.0",
  "pytest>=6.0.0",
  "pytest-cov>=2.10.1",
  "build>=1.0.3",
]
mypy = [
  "mypy>=1.3.0",
  "pandas-stubs",
  "types-Pillow",
]
doc = [
  "sphinx==4.4.0",
  "sphinx-book-theme>=0.3.0",
  "nbsphinx>=0.8.2",
  "docutils>=0.17",
  "ipython",
  "jinja2==3.0.3",
]


[tool.setuptools]
packages = ["stuff"]
include-package-data = true


[tool.setuptools.package-data]
assets = ["*.png", "*.css"]


[tool.setuptools.exclude-package-data]
tests = ["tests"]


[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
exclude = '''
(
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | setup.py
)
'''


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "debug"


[tool.isort]
# supress circular import warning
profile = "black"
# skip = []


[tool.coverage.run]
source = ["stuff"]
# see test_configs/*_cov.cfg for "omit"

[tool.coverage.report]
ignore_errors = true
# see test_configs/*_cov.cfg for "exclude_lines"


[tool.coverage.html]
directory = "htmlcov"


[tool.mypy]
namespace_packages = true
files = [
  "stuff"
]
plugins = []
ignore_errors = false

# Dynamic typing
disallow_any_generics = true
warn_return_any = true

# Strict fn defs
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# Safety/Upgrading Mypy
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true


[[tool.mypy.overrides]]
# Ignore packages that are not used or not typed
module = []
ignore_missing_imports = true
ignore_errors = true
